--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "connect": "2.3.x",
     "socket.io": "0.9.x",
-    "marked": "0.2.x"
+    "marked": "0.2.x",
+    "posix-getopt": "1.0.x"
   },
   "repository": {
     "type": "git",
