--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "description": "A simple wiki that uses markdown files",
   "license": "MIT",
   "scripts": {
-    "start": "nodewiki.js"
-  },
-  "engines": {
-    "node": ">=0.6.x"
+    "start": "bin/cli"
   },
   "main": "nodewiki.js",
   "bin": "./nodewiki.js",
-  "subdomain": "nodewiki",
   "dependencies": {
-    "connect": "2.3.x",
-    "socket.io": "0.9.x",
-    "marked": "0.2.x",
+    "express": "~4.0.0",
+    "body-parser": "~1.0.0",
+    "hjs": "~0.0.6",
+    "less-middleware": "0.1.15",
     "posix-getopt": "1.0.x"
   },
   "repository": {
