--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "main": "nodewiki.js",
   "bin": "./nodewiki.js",
   "dependencies": {
-    "express": "~4.0.0",
+    "async": "^0.7.0",
     "body-parser": "~1.0.0",
+    "express": "~4.0.0",
     "hjs": "~0.0.6",
     "less-middleware": "0.1.15",
     "posix-getopt": "1.0.x"
