--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "bin/cli.js"
   },
   "main": "nodewiki.js",
-  "bin": "./nodewiki.js",
+  "bin": "bin/cli.js",
   "dependencies": {
     "async": "^0.8.0",
     "body-parser": "~1.0.0",
