--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
   "bin": "bin/cli.js",
   "dependencies": {
     "async": "^0.8.0",
-    "body-parser": "~1.0.0",
-    "express": "~4.1.1",
-    "hjs": "~0.0.6",
-    "less-middleware": "0.1.15",
+    "body-parser": "^1.6.5",
+    "express": "^4.8.5",
+    "hjs": "0.0.6",
+    "less-middleware": "^1.0.3",
     "marked": "^0.3.2",
-    "parseurl": "^1.0.1",
-    "posix-getopt": "1.0.x",
-    "serve-static": "^1.1.0"
+    "parseurl": "^1.3.0",
+    "serve-static": "^1.5.3"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/nhoss2/nodewiki.git"
   },
   "devDependencies": {
-    "mocha": "^1.18.2"
+    "mocha": "^1.21.4"
   }
 }
