--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "async": "^0.8.0",
     "body-parser": "^1.6.5",
     "express": "^4.8.5",
+    "good": "^2.2.3",
+    "hapi": "^6.6.0",
     "hjs": "0.0.6",
     "less-middleware": "^1.0.3",
     "parseurl": "^1.3.0",
@@ -24,6 +26,7 @@
     "url": "git://github.com/nhoss2/nodewiki.git"
   },
   "devDependencies": {
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "supertest": "^0.13.0"
   }
 }
