--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "devDependencies": {
     "gulp": "^3.8.7",
     "gulp-less": "^1.3.5",
-    "mocha": "^1.21.4",
-    "supertest": "^0.13.0"
+    "mocha": "^1.21.4"
   }
 }
